examples/test/testpolicy1840.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1840
  namespace: namespace419
spec:
  podSelector:
    matchLabels:
      key17: value27
      key6: value14
      key35: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value11
          key33: value5
          key19: value9
      podSelector:
        matchLabels:
          key34: value12
          key7: value34
